--- a/RISCO_DE_CREDITO.ipynb
+++ b/RISCO_DE_CREDITO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfYZp3lK+/qQPTM0whnYN1",
+      "authorship_tag": "ABX9TyPPrcDjdaW6WPtI+bWO3Kka",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "id": "orTgF5xUV2fu"
       },
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "ByWXZPCpWAG3"
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -75,9 +75,9 @@
           "height": 488
         },
         "id": "x4gEBt9UWQeY",
-        "outputId": "7b678951-e372-4d84-d9c2-8cd1ac259313"
+        "outputId": "88f59dc7-f265-4342-e3fa-6980cd42da21"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +101,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5b5e9520-1b68-4127-b012-3cdc108f9b23\">\n",
+              "  <div id=\"df-a6b9a221-e309-4e82-9f53-d7e714b58865\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -244,7 +244,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5b5e9520-1b68-4127-b012-3cdc108f9b23')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a6b9a221-e309-4e82-9f53-d7e714b58865')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -295,12 +295,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5b5e9520-1b68-4127-b012-3cdc108f9b23 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a6b9a221-e309-4e82-9f53-d7e714b58865 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5b5e9520-1b68-4127-b012-3cdc108f9b23');\n",
+              "          const element = document.querySelector('#df-a6b9a221-e309-4e82-9f53-d7e714b58865');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 3
         }
       ]
     },
@@ -354,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QO-wamJIWXsu",
-        "outputId": "de67fe16-2632-434f-bc67-a6ca7cf4734b"
+        "outputId": "a6b5eca0-307d-434a-8529-5b777ff5e8be"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 4
         }
       ]
     },
@@ -395,9 +395,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5iYumat1XQXC",
-        "outputId": "9998a428-3cb7-4ed8-86ba-f03fae8f6fd2"
+        "outputId": "e9da7bf7-39e1-4ecf-fc26-d73af5cf1d75"
       },
-      "execution_count": 23,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,18 +409,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 5
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ruJTvfjaYVOZ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -446,7 +437,7 @@
       "metadata": {
         "id": "a_txB1GXYnUs"
       },
-      "execution_count": 26,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -461,7 +452,7 @@
       "metadata": {
         "id": "_C4DFlNFYupy"
       },
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -477,9 +468,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HMecGU_0aEXG",
-        "outputId": "e29d8d7e-879c-4c2d-c996-4313799e5ddf"
+        "outputId": "c503c418-7484-4e3d-96e2-91367ee43c48"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 8
         }
       ]
     },
@@ -525,7 +516,7 @@
       "metadata": {
         "id": "5xgVaDZnaH4e"
       },
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -546,7 +537,7 @@
       "metadata": {
         "id": "-fv5HvbRa2KT"
       },
-      "execution_count": 32,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -562,9 +553,9 @@
           "height": 75
         },
         "id": "drfYhfp7bWBF",
-        "outputId": "e6230da1-5111-4c28-f826-77af8aa3f1f1"
+        "outputId": "5f251cd2-197c-46a9-c64a-aa212fc24b23"
       },
-      "execution_count": 33,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,28 +568,28 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# previsão\n",
-        "\n",
-        "#\n",
+        "# historia boa (0) divida alta (0) garantias nenhuma (1) renda > 35 (2)\n",
+        "# historia ruim (2) divida alta (0) garantias adequadas (0) renda < 15 (0) \n",
         "\n",
         "previsao = naive_risco_credito.predict([[0,0,1,2], [2,0,0,0]])"
       ],
       "metadata": {
         "id": "kuV7C83YbqfA"
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# resultado\n",
         "previsao"
       ],
       "metadata": {
@@ -606,9 +597,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m0JsauBLcuwd",
-        "outputId": "557f0e03-5682-4933-cac9-e96870d5b08f"
+        "outputId": "bd45872c-03f8-493c-bdbf-410e81b2066d"
       },
-      "execution_count": 35,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,18 +609,63 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# as classes da coluna risco\n",
+        "naive_risco_credito.classes_"
+      ],
       "metadata": {
-        "id": "V4FSAFUMc0fe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IpzvRe7U0SxU",
+        "outputId": "946388f5-df59-4522-c985-222e279dd28e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['alto', 'baixo', 'moderado'], dtype='<U8')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# quantidade de cada class\n",
+        "naive_risco_credito.class_count_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vBX4PRRH0XyQ",
+        "outputId": "7c306424-ca4d-4193-84fa-847c437172e0"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6., 5., 3.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
